src/objects/Maize_Farmer__c.object
<CustomObject>
    <fields>
        <fullName>Acres_grown_Feb_June_2014__c</fullName>
        <label>Maize Acres grown Feb June 2014</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acres_grown_Sept_Dec_2013__c</fullName>
        <description>how many acres of maize did the farmer grow last year in the season of September to December 2013</description>
        <inlineHelpText>how many acres of maize did the farmer grow last year in the season of September to December 2013</inlineHelpText>
        <label>Maize Acres grown Sept Dec 2013</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acres_grown_Sept_Dec_2014__c</fullName>
        <label>Maize Acres grown Sept Dec 2014</label>
        <picklist>
            <picklistValues>
                <fullName>Less than 1 acre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1-5 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6-10 acres</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 11 acres</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Household_Revenue_Sources__c</fullName>
        <description>In addition to your maize income, what are the additional sources of revenue for your household?</description>
        <inlineHelpText>In addition to your maize income, what are the additional sources of revenue for your household?</inlineHelpText>
        <label>Additional Household Revenue Sources</label>
        <picklist>
            <picklistValues>
                <fullName>Other cash crops</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Livestock</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Remittances</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Government programs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Amount_Spent_on_Herbicides_last_12_month__c</fullName>
        <description>In the last 12 months, what was the total amount you spent in Ugandan shillings for the herbicide(s) used on your maize garden[s]?</description>
        <inlineHelpText>In the last 12 months, what was the total amount you spent in Ugandan shillings for the herbicide(s) used on your maize garden[s]?</inlineHelpText>
        <label>Amount Spent on Herbicides last 12 month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amount_in_UGX_spent_on_pesticides__c</fullName>
        <description>In the last 12 months, what was the total amount you spent in Ugandan shillings for the chemicals (pesticides/fungicides) used on your maize garden[s]?</description>
        <inlineHelpText>In the last 12 months, what was the total amount you spent in Ugandan shillings for the chemicals (pesticides/fungicides) used on your maize garden[s]?</inlineHelpText>
        <label>Amount in UGX spent on pesticides</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_of_Maize_Feb_Aug_2014__c</fullName>
        <label>Average Price of Maize Feb Aug 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Average_Price_of_Maize_Sep_Dec_2013__c</fullName>
        <label>Average Price of Maize Sep Dec 2013</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aware_danger_excessive_wrong_fertilizer__c</fullName>
        <description>Are you aware that excessive or wrong use of fertilizers can affect your maize yields or damage your soils</description>
        <inlineHelpText>Are you aware that excessive or wrong use of fertilizers can affect your maize yields or damage your soils</inlineHelpText>
        <label>Aware of excessive/wrong fertilizer use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_bad_effects_of_herbicide_use__c</fullName>
        <description>Are you aware of the bad or negative effects associated with use of herbicides to control weeds</description>
        <inlineHelpText>Are you a ware of the bad or negative effects associated with use of herbicides to control weeds</inlineHelpText>
        <label>Aware of bad effects of herbicide use</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_land_preparation_methods__c</fullName>
        <description>Are you aware of that the different methods of land preparation that you use impact on your maize yields?</description>
        <inlineHelpText>Are you aware of that the different methods of land preparation that you use impact on your maize yields?</inlineHelpText>
        <label>Aware of land preparation methods</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_late_planting_spacing_effects__c</fullName>
        <description>Are you aware that late planting and the kind of spacing that you use when planting maize greatly affects your maize yields and income</description>
        <inlineHelpText>Are you aware that late planting and the kind of spacing that you use when planting maize greatly affects your maize yields and income</inlineHelpText>
        <label>Aware of late planting &amp; spacing effects</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_maize_marketing_requirements__c</fullName>
        <description>Are you aware of maize marketing requirements and standards for East Africa</description>
        <inlineHelpText>Are you aware of maize marketing requirements and standards for East Africa</inlineHelpText>
        <label>Aware of maize marketing requirements</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_of_recommended_maize_farm_practice__c</fullName>
        <description>Are you very much aware of recommended maize farming practices</description>
        <inlineHelpText>Are you very much aware of recommended maize farming practices</inlineHelpText>
        <label>Aware of recommended maize farm practice</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Aware_poor_PHH_causes_50_harvest_loss__c</fullName>
        <description>Are you aware that 50% of the maize produced is lost during poor harvesting and post-harvest handling practices</description>
        <inlineHelpText>Are you aware that 50% of the maize produced is lost during poor harvesting and post-harvest handling practices</inlineHelpText>
        <label>Aware poor PHH causes 50% harvest loss</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Benefits_from_the_Farmer_Association__c</fullName>
        <description>What benefits do you get from the maize farmers&apos; copperative, group or association?</description>
        <inlineHelpText>What benefits do you get from the maize farmers&apos; copperative, group or association?</inlineHelpText>
        <label>Benefits from the Farmer Association</label>
        <picklist>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Information on maize production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better access to inputs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Better access to credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Obtain a better price for maize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Bulking_marketing__c</fullName>
        <label>Bulking and marketing (group marketing)</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_differentiate_btn_maize_varieties__c</fullName>
        <description>Can you easily differentiate between the different maize varities on market today? (i.e. Hybrids, Open pollinated varieties, Local etc.)</description>
        <inlineHelpText>Can you easily differentiate between the different maize varities on market today? (i.e. Hybrids, Open pollinated varieties, Local etc.)</inlineHelpText>
        <label>Can differentiate btn maize varieties</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Can_easily_detect_pest_or_animal_attacks__c</fullName>
        <description>Are you able to easily detect particular pest or disease attacks on your maize plants</description>
        <inlineHelpText>Are you able to easily detect particular pest or disease attacks on your maize plants</inlineHelpText>
        <label>Can easily detect pest or animal attacks</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carried_out_gap_filling_in_maize_garden__c</fullName>
        <description>Did you carry out gap filling in your maize garden</description>
        <inlineHelpText>Did you carry out gap filling in your maize garden</inlineHelpText>
        <label>Carried out gap filling in maize garden?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Carries_out_value_addition_to_maize__c</fullName>
        <description>Do you carry out any value addtion on your maize</description>
        <inlineHelpText>Do you carry out any value addtion on your maize</inlineHelpText>
        <label>Carries out value addition to maize</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Challenges_faced_during_maize_marketing__c</fullName>
        <description>What challenges do you face during maize marketing</description>
        <inlineHelpText>What challenges do you face during maize marketing</inlineHelpText>
        <label>Challenges faced during maize marketing</label>
        <picklist>
            <picklistValues>
                <fullName>Low prices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fake weighing scales from traders</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of information on current prices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long distant markets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Common_Method_of_Weed_Control_last_seaso__c</fullName>
        <description>What is the most common method of weed control that you used on your maize gardens last season</description>
        <inlineHelpText>What is the most common method of weed control that you used on your maize gardens last season</inlineHelpText>
        <label>Common Method of Weed Control last seaso</label>
        <picklist>
            <picklistValues>
                <fullName>Hand pulling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use herbicides (weed killers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hand hoe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use cover crops like beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not weed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Commonest_Fertilizer_Application_Method__c</fullName>
        <description>Which of the following is the most commonly used method when applying fertilizers or manure on your maize</description>
        <inlineHelpText>Which of the following is the most commonly used method when applying fertilizers or manure on your maize</inlineHelpText>
        <label>Commonest Fertilizer Application Method</label>
        <picklist>
            <picklistValues>
                <fullName>Placed around the maize plant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spot application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broad casting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Placed in trenches</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed in soil as we prepare the land</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mix with water and spray</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Commonest_agro_chemical_acquisition_mean__c</fullName>
        <description>What is the commonest means of acquisition of agro-chemicals (Fertilizers, herbicides and pesticides) that you use in maize production</description>
        <inlineHelpText>What is the commonest means of acquisition of agro-chemicals (Fertilizers, herbicides and pesticides) that you use in maize production</inlineHelpText>
        <label>Commonest agro-chemical acquisition mean</label>
        <picklist>
            <picklistValues>
                <fullName>Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Given for free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Get on credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Crops_intercropped_with_last_season__c</fullName>
        <description>What crops did you intercrop with maize last season</description>
        <inlineHelpText>What crops did you intercrop with maize last season</inlineHelpText>
        <label>Crops intercropped with last season</label>
        <picklist>
            <picklistValues>
                <fullName>Coffee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ground nuts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cowpeas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Soya bean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vegetables</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Do_customers_follow_these_standards__c</fullName>
        <description>Do your customers (buyers/traders) follow these requirements and standards while buying your maize</description>
        <inlineHelpText>Do your customers (buyers/traders) follow these requirements and standards while buying your maize</inlineHelpText>
        <label>Do customers follow these standards?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Extension_Agents_Farming_Info_Useful__c</fullName>
        <description>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Agriculture extension agents like from NAADs, NARO etc.</description>
        <inlineHelpText>Using a scale from very useful to not at all useful, how useful do you or anyone in your household find the information that you get about farming related matters from the Agriculture extension agents like from NAADs, NARO etc.</inlineHelpText>
        <label>Extension Agents Farming Info Useful</label>
        <picklist>
            <picklistValues>
                <fullName>Very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Somewhat useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not very useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not at all useful</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Don’t know</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Farmer_Association_Name__c</fullName>
        <description>What is the name of the group/association/cooperative</description>
        <inlineHelpText>What is the name of the group/association/cooperative</inlineHelpText>
        <label>Farmer Association Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fertilizer_Application_Rate_Last_Season__c</fullName>
        <description>Last season, how many times did you apply fertilizer(s) or manure on your maize garden[s]?</description>
        <inlineHelpText>Last season, how many times did you apply fertilizer(s) or manure on your maize garden[s]?</inlineHelpText>
        <label>Fertilizer Application Rate Last Season</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Twice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thrice</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 times</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fertilizer_Application_Stage__c</fullName>
        <description>At what stage of maize did you apply the fertilizers or manure</description>
        <inlineHelpText>At what stage of maize did you apply the fertilizers or manure</inlineHelpText>
        <label>Fertilizer Application Stage</label>
        <picklist>
            <picklistValues>
                <fullName>At land preparation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At planting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At knee height (3-4weeks after planting)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Towards flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>At Flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>After flowering</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Fertilizer_Quantity_per_Planting_Hole__c</fullName>
        <description>How much fertilizer do you apply on your maize per planting hole</description>
        <inlineHelpText>How much fertilizer do you apply on your maize per planting hole</inlineHelpText>
        <label>Fertilizer Quantity per Planting Hole</label>
        <picklist>
            <picklistValues>
                <fullName>One bottle top or teaspon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two bottle tops or teaspon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Focus_Farmer_Name__c</fullName>
        <formula>Focus_Farmer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Focus Farmer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Focus_Farmer__c</fullName>
        <label>Focus Farmer</label>
        <referenceTo>Focus_Farmer__c</referenceTo>
        <relationshipLabel>Maize Farmers</relationshipLabel>
        <relationshipName>Maize_Farmers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Followed_a_Fertilizer_Application_Plan__c</fullName>
        <description>Do you follow a particular program or plan such as time, type and amount of fertilizer to apply on your maize?</description>
        <inlineHelpText>Do you follow a particular program or plan such as time, type and amount of fertilizer to apply on your maize?</inlineHelpText>
        <label>Followed a Fertilizer Application Plan?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>FullName_with_GPS__c</fullName>
        <formula>Focus_Farmer__r.Person__r.First_Name__c + &apos; &apos; + Focus_Farmer__r.Person__r.Last_Name__c + &apos;:&apos; + TEXT(GPS_Latitude__c) + &apos;-&apos; + Text(GPS_Longitude__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FullName with GPS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GPS_Latitude__c</fullName>
        <formula>Submission__r.gfsurveys__gps_x__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPS Latitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GPS_Longitude__c</fullName>
        <formula>Submission__r.gfsurveys__gps_y__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GPS Longitude</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Gap_filling_stage__c</fullName>
        <description>At what stage of maize was gap filling done</description>
        <inlineHelpText>At what stage of maize was gap filling done</inlineHelpText>
        <label>Gap filling stage</label>
        <picklist>
            <picklistValues>
                <fullName>One week after germination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two weeks after germination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three weeks after germination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Four weeks after germination</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GeoLocation__c</fullName>
        <label>GeoLocation</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Harvesting_and_PHH_Activities_Done__c</fullName>
        <description>Do you commonly practice any of the following during harvesting and post harvest handling for your maize</description>
        <inlineHelpText>Do you commonly practice any of the following during harvesting and post harvest handling for your maize</inlineHelpText>
        <label>Harvesting and PHH Activities Done</label>
        <picklist>
            <picklistValues>
                <fullName>Drying</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sorting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cleaning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grading</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Packaging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Branding</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Name and Price tagging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Traceability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Harvesting_and_phh__c</fullName>
        <description>Proper harvesting and post harvest handling</description>
        <inlineHelpText>Proper harvesting and post harvest handling</inlineHelpText>
        <label>Proper harvesting &amp;post-harvest handling</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_determine_the_spacing_above__c</fullName>
        <description>How do you determine the spacing above</description>
        <inlineHelpText>How do you determine the spacing above</inlineHelpText>
        <label>How do you determine the spacing above</label>
        <picklist>
            <picklistValues>
                <fullName>Use strings or ropes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just estimate based on experience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_dry_your_maize__c</fullName>
        <description>How do you dry your maize</description>
        <inlineHelpText>How do you dry your maize</inlineHelpText>
        <label>How do you dry your maize</label>
        <picklist>
            <picklistValues>
                <fullName>Leave it in the garden to dry and harvest for marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest and dry on tarpaulin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest and dry on bare ground</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Harvest and put in the granary or crib</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Do not dry (sell fresh)</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_do_you_shell_your_maize__c</fullName>
        <description>How do you shell your maize</description>
        <inlineHelpText>How do you shell your maize</inlineHelpText>
        <label>How do you shell your maize</label>
        <picklist>
            <picklistValues>
                <fullName>Use mechanical Sheller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use hands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Beat with sticks</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_many_maize_seeds_do_you_put_per_hole__c</fullName>
        <description>How many maize seeds do you put per hole (based in the spacing that you use)</description>
        <inlineHelpText>How many maize seeds do you put per hole (based in the spacing that you use)</inlineHelpText>
        <label>How many maize seeds do you put per hole</label>
        <picklist>
            <picklistValues>
                <fullName>One seed per hole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Two seeds per hole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Three seeds per hole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>More than 3 seeds per hole</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>How_pests_and_diseases_are_managed__c</fullName>
        <description>How do you manage pests and diseases in your Maize garden (s)</description>
        <inlineHelpText>How do you manage pests and diseases in your Maize garden (s)</inlineHelpText>
        <label>How pests and diseases are managed</label>
        <picklist>
            <picklistValues>
                <fullName>Spray with chemicals (pesticides)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use local technolgoy/cultural means</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Use a combination of methods</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mechanical means (e.g. uproot and bury or burn)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>